Added filters for procurement projects and cpv-codes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(all_notices_modified_since_filter)
 export(all_notices_modified_until_filter)
 export(all_notices_published_since_filter)
 export(all_notices_published_until_filter)
+export(cpv_search)
 export(dps_filter)
 export(fetch_fields)
 export(fetch_notices)
@@ -13,6 +14,7 @@ export(is_national_filter)
 export(notice_number_filter)
 export(organisation_id_search)
 export(organisation_name_search)
+export(procurement_project_filter)
 export(query_and)
 export(query_or)
 importFrom(dplyr,matches)
